--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1,5 +1,15 @@
 % Encoding: UTF-8
 
+@Book{2015,
+  title     = {Illuminating Dark Networks: The Study of Clandestine Groups and Organizations},
+  publisher = {Cambridge University Press},
+  year      = {2015},
+  author    = {Gerdes, L. M.},
+  doi       = {10.1017/cbo9781316212639},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Book{Aarne1961,
   title     = {The types of the folktale: a classification and bibliography},
   publisher = {Academia Scientarum Fennica},
@@ -1381,6 +1391,28 @@
   timestamp = {2020.03.17},
 }
 
+@Book{Arquilla1996,
+  title     = {The Advent of Netwar},
+  publisher = {Rand},
+  year      = {1996},
+  author    = {Arquilla, J. and Ronfeldt, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.rand.org/pubs/monograph_reports/MR789.html},
+}
+
+@InCollection{Arquilla2001,
+  author    = {Arquilla, J. and Ronfeldt, D.},
+  title     = {The Advent of Netwar (Revisited)},
+  booktitle = {Networks and Netwars},
+  publisher = {Rand},
+  year      = {2001},
+  pages     = {1-25},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.rand.org/content/dam/rand/pubs/monograph_reports/MR1382/MR1382.ch1.pdf},
+}
+
 @InCollection{Assmann2008,
   author    = {Assmann, J.},
   title     = {Communicative and cultural memory},
@@ -1731,6 +1763,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://utpress.utexas.edu/books/bakess},
+}
+
+@Article{Bakker2012,
+  author    = {Bakker, R. M. and Raab, J. and Brinton Milward, H.},
+  title     = {A Preliminary Theory of Dark Network Resilience},
+  journal   = {Journal of Policy Analysis and Management},
+  year      = {2012},
+  volume    = {31},
+  number    = {1},
+  pages     = {33-62},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.jstor.org/stable/41429257},
 }
 
 @InProceedings{Bakshy2012,
@@ -2328,6 +2373,19 @@
   doi       = {10.1007/bf02766689},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@Article{Bearman1999,
+  author    = {Bearman, P. and Faris, R. and Moody, J.},
+  title     = {Blocking the Future: New Solutions for Old Problems in Historical Social Science},
+  journal   = {Social Science History},
+  year      = {1999},
+  volume    = {23},
+  number    = {4},
+  pages     = {501-533},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.jstor.org/stable/1171636},
 }
 
 @Article{Bearman2000,
@@ -3461,6 +3519,19 @@
   doi       = {10.1016/j.socnet.2005.11.005},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Borgatti2006a,
+  author    = {Borgatti, S. P.},
+  title     = {Identifying sets of key players in a social network},
+  journal   = {Computational and Mathematical Organization Theory},
+  year      = {2006},
+  volume    = {12},
+  number    = {1},
+  pages     = {21-34},
+  doi       = {10.1007/s10588-006-7084-x},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @Article{Borgatti2009a,
@@ -4771,6 +4842,19 @@
   owner     = {Vincent},
   timestamp = {2020.03.17},
   url       = {https://books.google.fr/books?id=Ot6v3YRgTm0C},
+}
+
+@Article{Carley1994,
+  author    = {Carley, K.},
+  title     = {Extracting culture through textual analysis},
+  journal   = {Poetics},
+  year      = {1994},
+  volume    = {22},
+  number    = {4},
+  pages     = {291-312},
+  doi       = {10.1016/0304-422x(94)90011-6},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @InProceedings{Carley2003,
@@ -6184,6 +6268,16 @@
   url       = {https://www.penguin.co.uk/books/207/20773/the-winter-king/9781405928328.html},
 }
 
+@Book{Cornwell2015,
+  title     = {Social Sequence Analysis: Methods and Applications},
+  publisher = {Cambridge University Press},
+  year      = {2015},
+  author    = {Cornwell, B.},
+  doi       = {10.1017/cbo9781316212530},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Correa2019,
   author    = {Corrêa, E. A. and Marinho, V. Q. and Amancio, D. R.},
   title     = {Semantic flow in language networks},
@@ -7134,6 +7228,44 @@
   timestamp = {2019.03.24},
 }
 
+@InCollection{Diesner2011,
+  author    = {Diesner, J. and Carley, K. M.},
+  title     = {Semantic Networks},
+  booktitle = {Encyclopedia of Social Networks},
+  publisher = {Sage},
+  year      = {2011},
+  pages     = {767-769},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {http://sk.sagepub.com/reference/socialnetworks/n315.xml},
+}
+
+@Article{Diesner2012,
+  author    = {Diesner, J. and Carley, K. M. and Tambayong, L.},
+  title     = {Extracting socio-cultural networks of the Sudan from open-source, large-scale text data},
+  journal   = {Computational and Mathematical Organization Theory},
+  year      = {2012},
+  volume    = {18},
+  number    = {3},
+  pages     = {328-339},
+  doi       = {10.1007/s10588-012-9126-x},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
+@InCollection{Diesner2014,
+  author    = {Diesner, J.},
+  title     = {Words and Networks: How Reliable Are Network Data Constructed from Text Data?},
+  booktitle = {Roles, Trust, and Reputation in Social Media Knowledge Markets},
+  publisher = {Springer},
+  year      = {2014},
+  series    = {Computational Social Sciences},
+  pages     = {81-89},
+  doi       = {10.1007/978-3-319-05467-4_5},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Book{Diestel2005,
   title     = {Graph Theory},
   publisher = {Springer},
@@ -7592,6 +7724,18 @@
   doi       = {10.1016/j.ins.2014.10.015},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Drieger2013,
+  author    = {Drieger, P.},
+  title     = {Semantic Network Analysis as a Method for Visual Text Analytics},
+  journal   = {Procedia Social and Behavioral Sciences},
+  year      = {2013},
+  volume    = {79},
+  pages     = {4-17},
+  doi       = {10.1016/j.sbspro.2013.05.053},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @InProceedings{Dror2018,
@@ -8339,6 +8483,19 @@
   url       = {http://www.renyi.hu/~p_erdos/1959-11.pdf},
 }
 
+@InCollection{Erickson2004,
+  author    = {Erickson, B. H.},
+  title     = {Social Networks},
+  booktitle = {The Blackwell Companion to Sociology},
+  publisher = {Blackwell Publishing},
+  year      = {2004},
+  chapter   = {22},
+  pages     = {314-326},
+  doi       = {10.1002/9780470693452.ch22},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @InCollection{Erne2011,
   author    = {Erne, L.},
   title     = {The First Quarto of Romeo and Juliet},
@@ -8988,6 +9145,16 @@
   timestamp = {2019.07.03},
 }
 
+@Book{Finke2005,
+  title     = {The Churching of America, 1776-2005: Winners and Losers in Our Religious Economy},
+  publisher = {Rutgers University Press},
+  year      = {2005},
+  author    = {Finke, R. and Stark, R.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://pennstate.pure.elsevier.com/en/publications/the-churching-of-america-1776-2005-winners-and-losers-in-our-reli},
+}
+
 @InProceedings{Finkel2005,
   author    = {Finkel, J. R. and Grenager, T. and Manning, C.},
   title     = {Incorporating non-local information into information extraction systems by Gibbs sampling},
@@ -9450,6 +9617,42 @@
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://books.google.fr/books/about/From_Words_to_Numbers.html?id=d_8c1jzJlnIC&redir_esc=y},
+}
+
+@Book{Franzosi2010,
+  title     = {Quantitative Narrative Analysis},
+  publisher = {Sage},
+  year      = {2010},
+  author    = {Franzosi, R. P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://us.sagepub.com/en-us/nam/quantitative-narrative-analysis/book227990},
+}
+
+@Article{Franzosi2010a,
+  author    = {Franzosi, R. P.},
+  title     = {Sociology, narrative, and the quality versus quantity debate (Goethe versus Newton): Can computer-assisted story grammars help us understand the rise of Italian fascism (1919-1922)?},
+  journal   = {Theory and Society},
+  year      = {2010},
+  volume    = {39},
+  number    = {6},
+  pages     = {593-629},
+  doi       = {10.1007/s11186-010-9131-3},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
+@Article{Franzosi2012,
+  author    = {Franzosi, R. and De Fazio, G. and Vicari, S.},
+  title     = {Ways of Measuring Agency},
+  journal   = {Sociological Methodology},
+  year      = {2012},
+  volume    = {42},
+  number    = {1},
+  pages     = {1-42},
+  doi       = {10.1177/0081175012462370},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @Book{Freehof1972,
@@ -10691,6 +10894,16 @@
   timestamp = {2012.07.25},
 }
 
+@Book{Granovetter1974,
+  title     = {Getting a Job: A Study of Contacts and Careers},
+  publisher = {Harvard University Press},
+  year      = {1974},
+  author    = {Granovetter, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/G/bo3636056.html},
+}
+
 @Article{Granovetter1983,
   author    = {Granovetter, M.},
   title     = {The Strength of Weak Ties: A Network Theory Revisited},
@@ -10701,6 +10914,28 @@
   doi       = {10.2307/202051},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{Granovetter2005,
+  author    = {Granovetter, M.},
+  title     = {The Impact of Social Structure on Economic Outcomes},
+  journal   = {Journal of Economic Perspectives},
+  year      = {2005},
+  volume    = {19},
+  pages     = {33-50},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://pubs.aeaweb.org/doi/pdf/10.1257/0895330053147958},
+}
+
+@Book{Granovetter2017,
+  title     = {Society and Economy: Framework and Principles},
+  publisher = {Belknap Press},
+  year      = {2017},
+  author    = {Granovetter, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.hup.harvard.edu/catalog.php?isbn=9780674975217},
 }
 
 @InProceedings{Granroth-Wilding2016,
@@ -10847,6 +11082,19 @@
   doi       = {10.1111/1540-8520.00029},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Griffin1993,
+  author    = {Griffin, L. J.},
+  title     = {Narrative, Event-Structure Analysis, and Causal Interpretation in Historical Sociology},
+  journal   = {American Journal of Sociology},
+  year      = {1993},
+  volume    = {98},
+  number    = {5},
+  pages     = {1094-1133},
+  doi       = {10.1086/230140},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @Article{Grimm2005,
@@ -14599,6 +14847,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.21},
   url       = {https://www.ucpress.edu/book/9780520221383/overhearing-film-dialogue},
+}
+
+@InCollection{Krackhardt1992,
+  author    = {Krackhardt, D.},
+  title     = {The Strength of Strong Ties: The Importance of Philos in Organizations},
+  booktitle = {Networks and Organizations: Structure, Form and Action},
+  publisher = {Harvard University Press},
+  year      = {1992},
+  pages     = {216-239},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.researchgate.net/publication/234021653_The_Strength_of_Strong_Ties_The_Importance_of_Philos_in_Organizations},
 }
 
 @Article{Kraft2003,
@@ -20943,6 +21203,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=2391033},
 }
 
+@TechReport{Oliver2014,
+  author      = {Oliver, K.},
+  title       = {Covert Networks: Structures, Processes, and Types},
+  institution = {Mitchell Centre, University of Manchester.},
+  year        = {2014},
+  type        = {Working Paper},
+  owner       = {Vincent},
+  timestamp   = {2020.07.23},
+  url         = {https://hummedia.manchester.ac.uk/schools/soss/research/mitchell/covertnetworks/wp/working_paper1.pdf},
+}
+
 @Article{OMeara2016,
   author    = {O'Meara, J.},
   title     = {What ``The Bechdel Test'' doesn't tell us: examining women's verbal and vocal (dis)empowerment in cinema},
@@ -21862,6 +22133,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2016.07.25},
 }
 
+@Article{Pfeffer2012,
+  author    = {Pfeffer, J. and Carley, K. M.},
+  title     = {Rapid modeling and analyzing networks extracted from pre-structured news articles},
+  journal   = {Computational and Mathematical Organization Theory},
+  year      = {2012},
+  volume    = {18},
+  number    = {3},
+  pages     = {280-299},
+  doi       = {10.1007/s10588-012-9122-1},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Pham2005,
   author    = {Pham, D. T. and Dimov, S. S. and Nguyen, C. D.},
   title     = {Selection of K in K-means clustering},
@@ -22580,6 +22864,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://press.princeton.edu/titles/5211.html},
 }
 
+@Article{Raab2003,
+  author    = {Raab, J. and Milward, H. B.},
+  title     = {Dark Networks as Problems},
+  journal   = {Journal of Public Administration Research and Theory},
+  year      = {2003},
+  volume    = {13},
+  pages     = {413-439},
+  doi       = {10.1093/jpart/mug029},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Rafael2014,
   author    = {Rafael, I. and Weltsek, G. and Tabone, C.},
   title     = {A study on the relationships between theater Arts and student literacy and mathematics achievement},
@@ -22695,6 +22991,45 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.1108243108},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Rapoport1953,
+  author    = {Rapoport, A.},
+  title     = {Spread of information through a population with socio-structural bias: I. Assumption of transitivity},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1953},
+  volume    = {15},
+  number    = {4},
+  pages     = {523-533},
+  doi       = {10.1007/bf02476440},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
+@Article{Rapoport1953a,
+  author    = {Rapoport, A.},
+  title     = {Spread of information through a population with socio-structural bias: II. Various models with partial transitivity},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1953},
+  volume    = {15},
+  number    = {4},
+  pages     = {535-546},
+  doi       = {10.1007/bf02476441},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
+@Article{Rapoport2007,
+  author    = {Rapoport, A. and Horvath, W. J.},
+  title     = {A study of a large sociogram},
+  journal   = {Behavioral Science},
+  year      = {2007},
+  volume    = {6},
+  number    = {4},
+  pages     = {279-291},
+  doi       = {10.1002/bs.3830060402},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @InProceedings{Rasheed2002,
@@ -23768,6 +24103,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.07.03},
 }
 
+@Article{Rossman2017,
+  author    = {Rossman, G.},
+  title     = {Glory and Gore},
+  journal   = {Contexts},
+  year      = {2017},
+  volume    = {16},
+  number    = {3},
+  pages     = {42-47},
+  doi       = {10.1177/1536504217732052},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+}
+
 @Article{Rosvall2008,
   author    = {Rosvall, M. and Bergstrom, C. T.},
   title     = {Maps of random walks on complex networks reveal community structure},
@@ -23952,6 +24300,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s005300050138},
   owner     = {Vincent},
   timestamp = {2018.04.27},
+}
+
+@Article{Rule2015,
+  author    = {Rule, A. and Cointet, J.-P. and Bearman, P. S.},
+  title     = {Lexical shifts, substantive changes, and continuity in State of the Union discourse, 1790{\textendash}2014},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2015},
+  volume    = {112},
+  number    = {35},
+  pages     = {10837-10844},
+  doi       = {10.1073/pnas.1512221112},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
 }
 
 @Article{Rumelhart1980,
@@ -25187,6 +25548,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Book{Silge2017,
+  title     = {Text Mining with R: A Tidy Approach},
+  publisher = {O'Reilly Media},
+  year      = {2017},
+  author    = {Silge, J. and Robinson, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://www.tidytextmining.com/},
+}
+
 @Article{Silva2011,
   author    = {Silva, F. N. and Viana, M. P. and Travençolo, B. A. N. and da Fontoura Costa, L.},
   title     = {Investigating relationships within and between category networks in Wikipedia},
@@ -25841,6 +26212,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/992730.992763},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Book{Stark2007,
+  title     = {Sociology},
+  publisher = {Wadsworth Publishing Company},
+  year      = {2007},
+  author    = {Stark, R.},
+  owner     = {Vincent},
+  timestamp = {2020.07.23},
+  url       = {https://books.google.fr/books/about/Sociology.html?id=A5CCPwAACAAJ},
 }
 
 @Article{Stauffer2001,
