added Murr2017 and Alexander2019

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2375,6 +2375,18 @@
   timestamp = {2020.07.20},
 }
 
+@Article{Beal2011,
+  author    = {Beal, W.},
+  title     = {Network Narration in John Dos Passos's U.S.A. Trilogy},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2011},
+  volume    = {5},
+  number    = {2},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {http://www.digitalhumanities.org/dhq/vol/5/2/000094/000094.html},
+}
+
 @Article{Bearman1999,
   author    = {Bearman, P. and Faris, R. and Moody, J.},
   title     = {Blocking the Future: New Solutions for Old Problems in Historical Social Science},
@@ -3458,6 +3470,16 @@
   url       = {https://www.mhprofessional.com/9780073535104-usa-film-art-an-introduction},
 }
 
+@Book{Bordwell2008,
+  title     = {Poetics of Cinema},
+  publisher = {Routledge},
+  year      = {2008},
+  author    = {Bordwell, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {http://www.davidbordwell.net/books/poetics.php},
+}
+
 @Book{Borg2005,
   title     = {Modern Multidimensional Scaling: Theory and Applications},
   publisher = {Springer},
@@ -4461,6 +4483,18 @@
   doi       = {10.1007/b97636},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@InCollection{Burrow1997,
+  author    = {Burrow, C.},
+  title     = {Virgils, from Dante to Milton},
+  booktitle = {The Cambridge Companion to Virgil},
+  publisher = {Cambridge University Press},
+  year      = {1997},
+  pages     = {79-90},
+  doi       = {10.1017/ccol0521495393.006},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
 }
 
 @Article{Burrows1987,
@@ -7970,6 +8004,16 @@
   url       = {https://aclweb.org/anthology/papers/P/P13/P13-1012/},
 }
 
+@Book{Dzelzainis2011,
+  title     = {The Politics of Paradise Lost},
+  publisher = {Oxford University Press},
+  year      = {2011},
+  author    = {Dzelzainis, M.},
+  doi       = {10.1093/oxfordhb/9780199697885.013.0031},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+}
+
 @Article{Eades1984,
   author    = {Eades, P.},
   title     = {A Heuristic for Graph Drawing},
@@ -11014,6 +11058,16 @@
   url       = {https://books.google.fr/books/about/Dictionary_of_Celtic_Myth_and_Legend.html?id=XreHrLyR31MC&redir_esc=y},
 }
 
+@Book{Green2009,
+  title     = {Milton's Ovidian Eve},
+  publisher = {Routledge},
+  year      = {2009},
+  author    = {Green, M.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.routledge.com/Miltons-Ovidian-Eve/Green/p/book/9780754666660},
+}
+
 @Book{Greenblatt2013,
   title     = {Hamlet in purgatory},
   publisher = {Princeton University Press},
@@ -11050,6 +11104,19 @@
   timestamp = {2019.04.06},
 }
 
+@Article{Gregory2013,
+  author    = {Gregory, T.},
+  title     = {Review: the renaissance epic and the oral past},
+  journal   = {Milton Quarterly},
+  year      = {2013},
+  volume    = {47},
+  number    = {4},
+  pages     = {241-245},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.jstor.org/stable/24461922},
+}
+
 @TechReport{Grener2017,
   author      = {Grener, A. and Luczak-Roesch, M. and Fenton, E. and Goldfinch, T.},
   title       = {Towards a Computational Literary Science: A Computational Approach to Dickens' Dynamic Character Networks},
@@ -11058,6 +11125,19 @@
   doi         = {10.5281/zenodo.259499.},
   owner       = {Vincent},
   timestamp   = {2017.12.02},
+}
+
+@Article{Greteman2015,
+  author    = {Greteman, B.},
+  title     = {Milton and the Early Modern Social Network: The Case of the Epitaphium Damonis},
+  journal   = {Milton Quarterly},
+  year      = {2015},
+  volume    = {49},
+  number    = {2},
+  pages     = {79-95},
+  doi       = {10.1111/milt.12126},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
 }
 
 @InProceedings{Gretton2006,
@@ -11598,6 +11678,16 @@
   url       = {http://faculty.ucr.edu/~hanneman},
 }
 
+@Book{Hansen2011,
+  title     = {Analyzing Social Media Networks with NodeXL: Insights from a Connected World},
+  publisher = {Elsevier},
+  year      = {2011},
+  author    = {Hansen, D. L. and Shneiderman, B. and Smith, M. A.},
+  doi       = {10.1016/c2009-0-64028-9},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+}
+
 @InProceedings{Harabagiu2005,
   author    = {Harabagiu, S. and Bejan, C. A. and Morarescu, P.},
   title     = {Shallow semantics for relation extraction},
@@ -12132,6 +12222,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.press.uchicago.edu/ucp/books/book/distributed/N/bo3628818.html},
+}
+
+@InCollection{Herman2018,
+  author    = {Herman, P. C.},
+  title     = {``Still Paying, Still to Owe'': Credit, Community, and Small Data in Shakespeare and Milton},
+  booktitle = {Digital Milton},
+  publisher = {Springer},
+  year      = {2018},
+  pages     = {153-177},
+  doi       = {10.1007/978-3-319-90478-8_7},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
 }
 
 @Article{Herranz2010,
@@ -12877,6 +12979,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=1TVaAAAAMAAJ},
 }
 
+@Book{Hurd1906,
+  title     = {The Works of Joseph Addison},
+  publisher = {George Bell and Sons, p. 177.},
+  year      = {1906},
+  author    = {Hurd, R.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.worldcat.org/title/works-of-joseph-addison/oclc/5670205},
+}
+
 @Article{Hurford1991,
   author    = {Hurford, J. R.},
   title     = {The evolution of the critical period for language acquisition},
@@ -13179,6 +13291,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Book{Jagoda2016,
+  title     = {Network Aesthetics},
+  publisher = {University of Chicago Press},
+  year      = {2016},
+  author    = {Jagoda, P.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {http://www.patrickjagoda.com/books/network-aesthetics},
+}
+
 @InProceedings{Jahan2018,
   author    = {Jahan, L. and Chauhan, G. and Finlayson, M. A.},
   title     = {A new approach to animacy detection},
@@ -13208,6 +13330,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/iccv.2007.4409055},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@InCollection{Jameson2010,
+  author    = {Jameson, F.},
+  title     = {Afterword: A Note on Literary Realism},
+  booktitle = {A Concise Companion to Realism},
+  publisher = {Wiley-Blackwell},
+  year      = {2010},
+  pages     = {279-289},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://trove.nla.gov.au/work/36452101},
 }
 
 @InProceedings{Jancarik2015,
@@ -15957,6 +16091,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.22},
 }
 
+@Article{Lee2017d,
+  author    = {Lee, J. J. and Lee, J.},
+  title     = {Shakespeare's Tragic Social Network; or Why All the World's a Stage},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2017},
+  volume    = {11},
+  number    = {2},
+  pages     = {201-232},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {http://www.digitalhumanities.org/dhq/vol/11/2/000289/000289.html},
+}
+
 @Article{Lee2018,
   author    = {Lee, O.-J. and Jung, J. J.},
   title     = {Modeling affective character network for story analytics},
@@ -16323,6 +16470,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1162/tacl_a_00134},
   owner     = {Vincent},
   timestamp = {2020.01.04},
+}
+
+@Book{Lewalski2014,
+  title     = {Paradise Lost and the Rhetoric of Literary Forms},
+  publisher = {Princeton University Press},
+  year      = {2014},
+  author    = {Lewalski, B.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://muse.jhu.edu/book/33554},
 }
 
 @Book{Lewin1936,
@@ -17109,6 +17266,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118783764.wbieme0092},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@InCollection{Loewenstein2018,
+  author    = {Loewenstein, D.},
+  title     = {Paradise Lost},
+  booktitle = {A Companion to Renaissance Poetry},
+  publisher = {John Wiley \& Sons},
+  year      = {2018},
+  pages     = {214-226},
+  doi       = {10.1002/9781118585184.ch15},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
 }
 
 @InProceedings{Lombardo2015,
@@ -18064,6 +18233,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://archive.bridgesmathart.org/1999/bridges1999-293.pdf},
 }
 
+@Article{Marcus2010,
+  author    = {Marcus, L.},
+  title     = {Milton among Women},
+  journal   = {Milton Studies},
+  year      = {2010},
+  volume    = {51},
+  pages     = {45-62},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.jstor.org/stable/26396002},
+}
+
 @InCollection{Margolin2007,
   author    = {Margolin, U.},
   title     = {Character},
@@ -18203,6 +18384,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2009.5206557},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Book{Martens1985,
+  title     = {The Diary Novel},
+  publisher = {Cambridge University Press},
+  year      = {1985},
+  author    = {Martens, L.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://catalogue.nla.gov.au/Record/1421236},
 }
 
 @Article{Martin2014,
@@ -18540,6 +18731,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Book{McColley1983,
+  title     = {Milton's Eve},
+  publisher = {University of Illinois Press},
+  year      = {1983},
+  author    = {McColley, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.worldcat.org/title/miltons-eve/oclc/558028798},
+}
+
 @Book{McCormack1985,
   title     = {Ascendancy and Tradition in Anglo-Irish Literary History from 1789 to 1939},
   publisher = {Oxford University Press},
@@ -18642,6 +18843,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.fourcourtspress.ie/books/2013/battle-of-clontarf-good-friday-1014/},
+}
+
+@Article{McGrath2013,
+  author    = {McGrath, P. J.},
+  title     = {Formal Resistance: Gender Hierarchy and Eve's Final Speech in ``Paradise Lost''},
+  journal   = {Milton Quarterly},
+  year      = {2013},
+  volume    = {47},
+  number    = {2},
+  pages     = {72-87},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.jstor.org/stable/24461982},
 }
 
 @Article{McGuffin2012,
@@ -19043,6 +19257,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.22},
 }
 
+@Article{Miller2018,
+  author    = {Miller, J. and Rogers, G.},
+  title     = {Translation and/as Disconnection},
+  journal   = {Modernism/Modernity Print Plus},
+  year      = {2018},
+  volume    = {3},
+  number    = {3},
+  doi       = {10.26597/mod.0062},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+}
+
 @Article{Miller2019,
   author    = {Miller, T.},
   title     = {Explanation in artificial intelligence: Insights from the social sciences},
@@ -19141,6 +19367,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://tminka.github.io/papers/dirichlet/},
 }
 
+@Book{Mintz2003,
+  title     = {Threshold Poetics: Milton and Intersubjectivity},
+  publisher = {University of Delaware},
+  year      = {2003},
+  author    = {Mintz, S.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.questia.com/library/120079763/threshold-poetics-milton-and-intersubjectivity},
+}
+
 @InProceedings{Mintz2009,
   author    = {Mintz, M. and Bills, S. and Snow, R. L. and Jurafsky, D. S.},
   title     = {Distant supervision for relation extraction without labeled data},
@@ -19236,6 +19472,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/vlt.2006.0032},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Book{Mizruchi1982,
+  title     = {The American Corporate Network, 1904-1974},
+  publisher = {Sage Publications},
+  year      = {1982},
+  author    = {Mizruchi, M. S.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://sites.lsa.umich.edu/mizruchi/books/the-american-corporate-network/},
 }
 
 @Article{Moattar2012,
@@ -19836,6 +20082,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Article{Mueller1969,
+  author    = {Mueller, M.},
+  title     = {``Paradise Lost'' and the ``Iliad''},
+  journal   = {Comparative Literature Studies},
+  year      = {1969},
+  volume    = {6},
+  number    = {3},
+  pages     = {292-316},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.jstor.org/stable/40467833},
+}
+
 @InProceedings{Mueller2003,
   author    = {Mueller, E. T.},
   title     = {Story understanding through multi-representation model construction},
@@ -19954,7 +20213,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Digital Analysis of the Literary Reception of J. W. v. Goethe's 'Die Leiden des jungen Werthers'},
   booktitle = {Digital Humanities},
   year      = {2017},
-  abstract  = {The impact of Johann Wolfgang von Goethe's epistolary novel Die Leiden des jungen Werthers marks a singular moment in German literary history, as it sparked a remarkable critical and productive literary reception. After the publication in 1774, so-called Wertheriaden — literary adaptations that are formally, thematically and structurally guided by Goethe’s novel — appeared in various languages. These texts form our corpus for the Werther Project, which is part of the interdisciplinary DH Project CRETA of the University of Stuttgart.},
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://dh2017.adho.org/abstracts/352/352.pdf},
@@ -22334,6 +22592,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.28},
 }
 
+@Book{Pizer2013,
+  title     = {Toward a Modernist Style: John Dos Passos},
+  publisher = {Bloomsbury},
+  year      = {2013},
+  author    = {Pizer, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.bloomsbury.com/us/toward-a-modernist-style-john-dos-passos-9781623564896},
+}
+
 @InProceedings{Plaisant2006,
   author    = {Plaisant, C. and Rose, J. and Yu, B. and Auvil, L. and Kirschenbaum, M. G. and Nell Smith, M. and Clement, T. and Lord, G.},
   title     = {Exploring erotics in Emily Dickinson's correspondence with text mining and visual interfaces},
@@ -22675,6 +22943,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/10.5749/j.ctttv14w},
 }
 
+@Book{Pruitt2003,
+  title     = {Gender and the Power of Relationship: ``United as One Individual Soul'' in Paradise Lost},
+  publisher = {Duquesne University Press},
+  year      = {2003},
+  author    = {Pruitt, K.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://muse.jhu.edu/book/5374},
+}
+
 @Article{Przulj2007,
   author    = {Przulj, N.},
   title     = {Biological network comparison using graphlet degree distribution},
@@ -22864,6 +23142,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://press.princeton.edu/titles/5211.html},
 }
 
+@Book{Quint2014,
+  title     = {Inside Paradise Lost: Reading the Designs of Milton's Epic},
+  publisher = {Princeton University Press},
+  year      = {2014},
+  author    = {Quint, D.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://press.princeton.edu/books/paperback/9780691159744/inside-paradise-lost},
+}
+
 @Article{Raab2003,
   author    = {Raab, J. and Milward, H. B.},
   title     = {Dark Networks as Problems},
@@ -22978,6 +23266,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.jstor.org/stable/10.5406/j.ctt1xcmrr},
+}
+
+@Book{Ranciere2014,
+  title     = {The Politics of Literature},
+  publisher = {Polity Press},
+  year      = {2014},
+  author    = {Rancière, J.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://muse.jhu.edu/article/54196},
 }
 
 @Article{Rand2011,
@@ -25500,6 +25798,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.insticc.org/Primoris/Resources/PaperPdf.ashx?idPaper=69350},
 }
 
+@Article{Shullenberger1986,
+  author    = {Shullenberger, W.},
+  title     = {Wrestling with the Angel: Paradise Lost and Feminist Criticism},
+  journal   = {Milton Quarterly},
+  year      = {1986},
+  volume    = {20},
+  number    = {3},
+  pages     = {69-85},
+  doi       = {10.1111/j.1094-348x.1986.tb00681.x},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+}
+
 @InProceedings{Si2008,
   author    = {Si, M. and Marsella, S. C. and Riedl, M. O.},
   title     = {Interactive Drama Authoring with Plot and Character: An Intelligent System that Fosters Creativity},
@@ -27707,6 +28018,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@Article{Travers1969,
+  author    = {Travers, J. and Milgram, S.},
+  title     = {An Experimental Study of the Small World Problem},
+  journal   = {Sociometry},
+  year      = {1969},
+  volume    = {32},
+  number    = {4},
+  pages     = {425-443},
+  doi       = {10.2307/2786545},
+  owner     = {Vincent},
+  timestamp = {2012.03.27},
+}
+
 @Article{Trequattrini2015,
   author    = {Trequattrini, R. and Lombardi, R. and Battista, M.},
   title     = {Network analysis and football team performance: a first application},
@@ -28615,6 +28939,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Book{Walker1998,
+  title     = {Medusa's Mirrors: Spenser, Shakespeare, Milton, and the Metamorphosis of the Female Self},
+  publisher = {University of Delaware Press},
+  year      = {1998},
+  author    = {Walker, J.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://searchworks.stanford.edu/view/3933237},
+}
+
 @PhdThesis{Wallace2011,
   author    = {Wallace, B.},
   title     = {Warriors and Warfare: Ideal and Reality in Early Insular Texts},
@@ -28906,6 +29240,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/bife.2012.23},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@TechReport{Weimann1980,
+  author      = {Weimann, G.},
+  title       = {Conversation Networks as Communication Networks},
+  institution = {Hebrew University of Jerusalem},
+  year        = {1980},
+  owner       = {Vincent},
+  timestamp   = {2020.07.24},
+  url         = {https://www.researchgate.net/profile/Gabriel_Weimann/research},
 }
 
 @Article{Weingart2011,
@@ -29405,6 +29749,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://www.worldcat.org/title/philosophical-investigations/oclc/371912},
+}
+
+@InCollection{Wittreich1990,
+  author    = {Wittreich, J.},
+  title     = {``John, John, I blush for thee!'': mapping gender discourses in Paradise Lost},
+  booktitle = {Out of Bounds: Male Writers and Gender(ed) Criticism},
+  publisher = {University of Massachusetts Press},
+  year      = {1990},
+  pages     = {39},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://eige.europa.eu/library/resource/GIB_VUF68327genderbib},
 }
 
 @InCollection{Woelfel1993,
@@ -30906,6 +31262,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2810249},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Book{Zwerdling1986,
+  title     = {Virginia Woolf and the Real World},
+  publisher = {University of California Press},
+  year      = {1986},
+  author    = {Zwerdling, A.},
+  owner     = {Vincent},
+  timestamp = {2020.07.24},
+  url       = {https://www.ucpress.edu/book/9780520061842/virginia-woolf-and-the-real-world},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
